fix: verified nowrap

--- a/src/components/addresses/ContextualAddress.less
+++ b/src/components/addresses/ContextualAddress.less
@@ -33,6 +33,8 @@
   }
 
   .address-verified {
+    white-space: nowrap;
+
     &:not(.address-verified-inactive) {
       &, a {
         color: fade(@kw-orange, 60%);
